--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
-    "username": "nugraha",
-    "password": "nugraha",
+    "username": "postgres",
+    "password": "123456",
     "database": "authoscar",
     "host": "127.0.0.1",
     "dialect": "postgres"
